--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,9 @@
     "module": "commonjs",
     "rootDir": "src",
     "outDir": "dist"
-  }
+  },
+  "exclude": [
+      "node_modules",
+      "**/*.test.ts"
+  ]
 }
